[project]
name = "loan-calculator"
version = "0.1.0"
authors = ["Ilya Mevshiy <ilyamevshiy@gmail.com>"]
readme = "README.md"
license = "MIT"


[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py312"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".eggs",
    "user_data",
    ".venv",
    ".env",
]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
skip_gitignore = true
